; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/sis/extr_init301.c_SiS_PrepareReadDDC.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/sis/extr_init301.c_SiS_PrepareReadDDC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SiS_Private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i16 (%struct.SiS_Private*)* @SiS_PrepareReadDDC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i16 @SiS_PrepareReadDDC(%struct.SiS_Private* %0) #0 {
  %2 = alloca i16, align 2
  %3 = alloca %struct.SiS_Private*, align 8
  store %struct.SiS_Private* %0, %struct.SiS_Private** %3, align 8
  %4 = load %struct.SiS_Private*, %struct.SiS_Private** %3, align 8
  %5 = call i64 @SiS_SetStart(%struct.SiS_Private* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i16 -1, i16* %2, align 2
  br label %18

8:                                                ; preds = %1
  %9 = load %struct.SiS_Private*, %struct.SiS_Private** %3, align 8
  %10 = load %struct.SiS_Private*, %struct.SiS_Private** %3, align 8
  %11 = getelementptr inbounds %struct.SiS_Private, %struct.SiS_Private* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = or i32 %12, 1
  %14 = call i64 @SiS_WriteDDC2Data(%struct.SiS_Private* %9, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %8
  store i16 -1, i16* %2, align 2
  br label %18

17:                                               ; preds = %8
  store i16 0, i16* %2, align 2
  br label %18

18:                                               ; preds = %17, %16, %7
  %19 = load i16, i16* %2, align 2
  ret i16 %19
}

declare dso_local i64 @SiS_SetStart(%struct.SiS_Private*) #1

declare dso_local i64 @SiS_WriteDDC2Data(%struct.SiS_Private*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
